docs/1.0.0/benchmarks.md
# Benchmarks

## Level 1 Match ([XOT](https://berg.earthlingz.de/xot/aboutxot.php))

**1.0.0 vs 0.1.0**

- Games: 21568 W: 14833 L: 6151 D: 584
- Ptnml(0-2): 860, 176, 4265, 388, 5095
- Elo: +148.2 ± 5.0
- Disc Diff: +253764 (+11.77/game)

## FFO#40–59 Endgame test suite

- **CPU:** AMD Ryzen 9 9950X3D (stock)
- **Hash size:** 256MB

### Single Thread

|  #  | Depth  | Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|---------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.129 |      7,986,693 |    61,962,783 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.225 |     12,810,463 |    56,967,799 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.269 |     14,654,029 |    54,473,493 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.917 |     40,379,097 |    44,023,729 | G3 H6 C7 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.215 |      8,604,485 |    40,088,283 | B8 G5 D2 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    3.236 |    165,247,239 |    51,063,458 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.532 |     25,108,454 |    47,238,279 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.210 |     10,290,711 |    48,914,966 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    1.655 |     57,924,607 |    35,004,102 | F6 G5 G3 |   28.0 |  28 : F6                         |
|  49 |   26   |    2.966 |    122,028,137 |    41,138,086 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |   10.944 |    451,070,762 |    41,214,847 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    2.384 |    107,450,464 |    45,062,844 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    2.345 |    112,001,462 |    47,757,990 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |   21.948 |  1,135,658,393 |    51,741,991 | D8 B6 A5 |   -2.0 |  -2 : D8                         |
|  54 |   28   |   36.505 |  2,085,632,251 |    57,132,776 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |  104.336 |  4,736,190,829 |    45,393,801 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |   12.768 |    493,806,929 |    38,674,241 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |   10.160 |    432,059,284 |    42,526,329 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |   15.305 |    703,912,393 |    45,991,172 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.454 |      3,401,809 |     7,496,224 | G8 E8 H4 |   64.0 |  64 : H4,G8,E8                   |

- **Total Time:** 227.504s
- **Total Nodes:** 10,726,218,491
- **NPS:** 47,147,332

### Multithread (32 threads)

|  #  | Depth  | Time(s)  |     Nodes      |      NPS      |   Line   | Score  | Expected                         |
|----:|-------:|---------:|---------------:|--------------:|:---------|-------:|:---------------------------------|
|  40 |   20   |    0.015 |      9,384,429 |   609,259,819 | A2 B1 C1 |   38.0 |  38 : A2                         |
|  41 |   22   |    0.048 |     18,193,415 |   375,377,370 | H4 A3 A2 |    0.0 |   0 : H4                         |
|  42 |   22   |    0.044 |     17,927,394 |   409,973,289 | G2 H1 C2 |    6.0 |   6 : G2                         |
|  43 |   23   |    0.087 |     47,505,116 |   547,069,588 | G3 H6 C7 |  -12.0 | -12 : G3,C7                      |
|  44 |   23   |    0.038 |     10,585,865 |   278,744,108 | D2 G5 B8 |  -14.0 | -14 : D2,B8                      |
|  45 |   24   |    0.229 |    200,613,304 |   875,922,436 | B2 C1 G5 |    6.0 |   6 : B2                         |
|  46 |   24   |    0.087 |     38,894,866 |   446,191,454 | B3 C1 B1 |   -8.0 |  -8 : B3                         |
|  47 |   25   |    0.045 |     14,472,439 |   321,971,078 | G2 B8 B7 |    4.0 |   4 : G2                         |
|  48 |   25   |    0.145 |     72,052,278 |   498,369,218 | F6 G5 G3 |   28.0 |  28 : F6                         |
|  49 |   26   |    0.290 |    167,251,573 |   577,389,578 | E1 H4 G6 |   16.0 |  16 : E1                         |
|  50 |   26   |    0.584 |    488,953,210 |   837,252,518 | D8 E8 G8 |   10.0 |  10 : D8                         |
|  51 |   27   |    0.200 |    132,625,382 |   661,655,388 | E2 H2 G7 |    6.0 |   6 : E2,A3                      |
|  52 |   27   |    0.271 |    174,639,544 |   644,167,506 | A3 F2 E1 |    0.0 |   0 : A3                         |
|  53 |   28   |    1.340 |  1,333,274,277 |   995,345,664 | D8 B6 A5 |   -2.0 |  -2 : D8                         |
|  54 |   28   |    1.926 |  2,312,160,651 | 1,200,343,969 | C7 G6 G5 |   -2.0 |  -2 : C7                         |
|  55 |   29   |    4.898 |  5,096,751,743 | 1,040,536,206 | G6 H7 C1 |    0.0 |   0 : G6,B7,E2,G4                |
|  56 |   29   |    0.759 |    541,974,233 |   714,306,732 | H5 H4 H3 |    2.0 |   2 : H5                         |
|  57 |   30   |    0.650 |    519,718,207 |   799,985,172 | A6 B5 B4 |  -10.0 | -10 : A6                         |
|  58 |   30   |    1.103 |  1,064,089,219 |   965,036,957 | G1 F2 H3 |    4.0 |   4 : G1                         |
|  59 |   34   |    0.044 |      3,931,769 |    88,671,984 | G8 E8 H4 |   64.0 |  64 : H4,G8,E8                   |

- **Total Time:** 12.803s
- **Total Nodes:** 12,264,998,914
- **NPS:** 958,001,328
